# utci-nn

./: README.md  pyproject.toml  test.ipynb  utci_nn_model.py  utci_nn_weights.pth
src/NN_UTCI/: __init__.py
src/NeuralUTCI/: __init__.py  utci_nn_model.py
src/NeuralUTCI/assets/: scaler.pkl
src/utci_nn/: __init__.py  utci_nn_model.py
tests/: test.ipynb
