[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NeuralUTCI"
version = "0.1.0"
description = "UTCI neural network approximator by Pastine et al."
requires-python = ">=3.8"
dependencies = [
    "torch",
    "scikit-learn",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
utci_nn = ["assets/*"]